@@ -4,6 +4,7 @@ Release history for Perl module BackPAN::Index::Create
     - Got rid of my one use of // so I could drop down to requiring 5.6. Sigh.
     - The SYNOPSIS made it look like create_backpan_index() is always exported.
       It isn't, so updated SYNOPSIS to make that clear.
+    - Added some real tests.
     - Improved the introductory part of the documentation, adding a link
       to backpan.perl.org
 
